WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79641
[Refactoring] RenderSummary and RenderDetail is no longer needed.
https://bugs.webkit.org/show_bug.cgi?id=79641
Summary
[Refactoring] RenderSummary and RenderDetail is no longer needed.
Hajime Morrita
Reported
2012-02-27 00:52:26 PST
Since we reimplemented these in terms of shadow DOM, we no longer need these.
Attachments
Patch
(424.59 KB, patch)
2012-02-27 23:30 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(424.55 KB, patch)
2012-02-28 00:10 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(431.91 KB, patch)
2012-02-28 01:43 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(433.51 KB, patch)
2012-02-28 17:26 PST
,
Hajime Morrita
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-02-27 23:30:41 PST
Created
attachment 129196
[details]
Patch
Hajime Morrita
Comment 2
2012-02-27 23:31:36 PST
Kent-san, could you take a look? They're finally gone.
Kent Tamura
Comment 3
2012-02-27 23:54:06 PST
Comment on
attachment 129196
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=129196&action=review
> Source/WebCore/rendering/RenderDetailsMarker.cpp:147 > + ASSERT(false);
Does this mean ASSERT_NOT_REACHED()?
Hajime Morrita
Comment 4
2012-02-28 00:00:57 PST
> Does this mean ASSERT_NOT_REACHED()?
Oops. It's for debug. I should remove it.
Hajime Morrita
Comment 5
2012-02-28 00:10:46 PST
Created
attachment 129202
[details]
Patch
Kent Tamura
Comment 6
2012-02-28 01:02:34 PST
Comment on
attachment 129202
[details]
Patch Looks ok
Hajime Morrita
Comment 7
2012-02-28 01:43:52 PST
Created
attachment 129215
[details]
Patch for landing
WebKit Review Bot
Comment 8
2012-02-28 03:41:20 PST
Comment on
attachment 129215
[details]
Patch for landing Rejecting
attachment 129215
[details]
from commit-queue. New failing tests: fullscreen/full-screen-render-inline.html Full output:
http://queues.webkit.org/results/11666064
Hajime Morrita
Comment 9
2012-02-28 17:26:25 PST
Created
attachment 129360
[details]
Patch for landing
WebKit Review Bot
Comment 10
2012-02-28 18:36:13 PST
Comment on
attachment 129360
[details]
Patch for landing Rejecting
attachment 129360
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: t/git/webkit-commit-queue/Source/WebKit/chromium/v8 --revision 10840 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 47>At revision 10840. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/11682071
Hajime Morrita
Comment 11
2012-02-28 22:27:03 PST
Committed
r109192
: <
http://trac.webkit.org/changeset/109192
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug