[Refactoring] RenderSummary and RenderDetail is no longer needed. https://bugs.webkit.org/show_bug.cgi?id=79641

Source/WebCore:

Reviewed by Kent Tamura.

Removed RenderDetails and RenderSummary because its only
modification they had is already handled by RenderBlock::styleWillChange().
These are just a historical artifact. We could have removed these
classes when they were switched to shadow-based implementations.

Tests: fast/html/details-inline-expected.html
       fast/html/details-inline.html

* CMakeLists.txt:
* GNUmakefile.list.am:
* Target.pri:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* html/HTMLDetailsElement.cpp:
(WebCore::HTMLDetailsElement::createRenderer):
* html/HTMLSummaryElement.cpp:
(WebCore::HTMLSummaryElement::createRenderer):
(WebCore::HTMLSummaryElement::defaultEventHandler):
* rendering/RenderDetails.cpp: Removed.
* rendering/RenderDetails.h: Removed.
* rendering/RenderDetailsMarker.cpp:
(WebCore::RenderDetailsMarker::isOpen):
* rendering/RenderDetailsMarker.h:
(RenderDetailsMarker):
* rendering/RenderObject.h:
(RenderObject):
* rendering/RenderSummary.cpp: Removed.
* rendering/RenderSummary.h: Removed.
* rendering/RenderingAllInOne.cpp:

LayoutTests:

Reviewed by Kent Tamura.

- Replaced "RenderSummary" and "RenderDetails" with "RenderBlock".
- Added a test to ensure that summmary and details behave like a "inline-block" even when
  "inline" is given.

* fast/html/details-inline-expected.html: Added.
* fast/html/details-inline.html: Added.
* platform/chromium-linux/fast/html/details-replace-summary-child-expected.txt:
* platform/chromium-linux/fast/html/details-replace-text-expected.txt:
* platform/chromium-win/fast/html/details-add-child-1-expected.txt:
* platform/chromium-win/fast/html/details-add-child-2-expected.txt:
* platform/chromium-win/fast/html/details-add-details-child-1-expected.txt:
* platform/chromium-win/fast/html/details-add-details-child-2-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-1-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-1-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-10-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-10-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-2-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-2-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-3-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-3-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-4-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-4-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-5-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-5-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-6-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-6-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-7-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-7-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-8-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-8-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-9-and-click-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-9-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-child-1-expected.txt:
* platform/chromium-win/fast/html/details-add-summary-child-2-expected.txt:
* platform/chromium-win/fast/html/details-nested-1-expected.txt:
* platform/chromium-win/fast/html/details-nested-2-expected.txt:
* platform/chromium-win/fast/html/details-no-summary1-expected.txt:
* platform/chromium-win/fast/html/details-no-summary2-expected.txt:
* platform/chromium-win/fast/html/details-no-summary3-expected.txt:
* platform/chromium-win/fast/html/details-no-summary4-expected.txt:
* platform/chromium-win/fast/html/details-open-javascript-expected.txt:
* platform/chromium-win/fast/html/details-open1-expected.txt:
* platform/chromium-win/fast/html/details-open2-expected.txt:
* platform/chromium-win/fast/html/details-open3-expected.txt:
* platform/chromium-win/fast/html/details-open4-expected.txt:
* platform/chromium-win/fast/html/details-open5-expected.txt:
* platform/chromium-win/fast/html/details-open6-expected.txt:
* platform/chromium-win/fast/html/details-position-expected.txt:
* platform/chromium-win/fast/html/details-remove-child-1-expected.txt:
* platform/chromium-win/fast/html/details-remove-child-2-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-1-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-2-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-2-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-3-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-3-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-4-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-5-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-5-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-6-and-click-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-6-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-child-1-expected.txt:
* platform/chromium-win/fast/html/details-remove-summary-child-2-expected.txt:
* platform/chromium-win/fast/html/details-replace-summary-child-expected.txt:
* platform/chromium-win/fast/html/details-replace-text-expected.txt:
* platform/chromium-win/fast/html/details-writing-mode-expected.txt:
* platform/gtk/fast/html/details-add-child-1-expected.txt:
* platform/gtk/fast/html/details-add-child-2-expected.txt:
* platform/gtk/fast/html/details-add-details-child-1-expected.txt:
* platform/gtk/fast/html/details-add-details-child-2-expected.txt:
* platform/gtk/fast/html/details-add-summary-1-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-1-expected.txt:
* platform/gtk/fast/html/details-add-summary-10-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-10-expected.txt:
* platform/gtk/fast/html/details-add-summary-2-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-2-expected.txt:
* platform/gtk/fast/html/details-add-summary-3-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-3-expected.txt:
* platform/gtk/fast/html/details-add-summary-4-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-4-expected.txt:
* platform/gtk/fast/html/details-add-summary-5-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-5-expected.txt:
* platform/gtk/fast/html/details-add-summary-6-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-6-expected.txt:
* platform/gtk/fast/html/details-add-summary-7-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-7-expected.txt:
* platform/gtk/fast/html/details-add-summary-8-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-8-expected.txt:
* platform/gtk/fast/html/details-add-summary-9-and-click-expected.txt:
* platform/gtk/fast/html/details-add-summary-9-expected.txt:
* platform/gtk/fast/html/details-add-summary-child-1-expected.txt:
* platform/gtk/fast/html/details-add-summary-child-2-expected.txt:
* platform/gtk/fast/html/details-nested-1-expected.txt:
* platform/gtk/fast/html/details-nested-2-expected.txt:
* platform/gtk/fast/html/details-no-summary1-expected.txt:
* platform/gtk/fast/html/details-no-summary2-expected.txt:
* platform/gtk/fast/html/details-no-summary3-expected.txt:
* platform/gtk/fast/html/details-no-summary4-expected.txt:
* platform/gtk/fast/html/details-open-javascript-expected.txt:
* platform/gtk/fast/html/details-open1-expected.txt:
* platform/gtk/fast/html/details-open2-expected.txt:
* platform/gtk/fast/html/details-open3-expected.txt:
* platform/gtk/fast/html/details-open4-expected.txt:
* platform/gtk/fast/html/details-open5-expected.txt:
* platform/gtk/fast/html/details-open6-expected.txt:
* platform/gtk/fast/html/details-position-expected.txt:
* platform/gtk/fast/html/details-remove-child-1-expected.txt:
* platform/gtk/fast/html/details-remove-child-2-expected.txt:
* platform/gtk/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-1-expected.txt:
* platform/gtk/fast/html/details-remove-summary-2-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-2-expected.txt:
* platform/gtk/fast/html/details-remove-summary-3-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-3-expected.txt:
* platform/gtk/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-4-expected.txt:
* platform/gtk/fast/html/details-remove-summary-5-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-5-expected.txt:
* platform/gtk/fast/html/details-remove-summary-6-and-click-expected.txt:
* platform/gtk/fast/html/details-remove-summary-6-expected.txt:
* platform/gtk/fast/html/details-remove-summary-child-1-expected.txt:
* platform/gtk/fast/html/details-remove-summary-child-2-expected.txt:
* platform/gtk/fast/html/details-replace-summary-child-expected.txt:
* platform/gtk/fast/html/details-replace-text-expected.txt:
* platform/gtk/fast/html/details-writing-mode-expected.txt:
* platform/mac/fast/html/details-add-child-1-expected.txt:
* platform/mac/fast/html/details-add-child-2-expected.txt:
* platform/mac/fast/html/details-add-details-child-1-expected.txt:
* platform/mac/fast/html/details-add-details-child-2-expected.txt:
* platform/mac/fast/html/details-add-summary-1-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-1-expected.txt:
* platform/mac/fast/html/details-add-summary-10-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-10-expected.txt:
* platform/mac/fast/html/details-add-summary-2-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-2-expected.txt:
* platform/mac/fast/html/details-add-summary-3-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-3-expected.txt:
* platform/mac/fast/html/details-add-summary-4-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-4-expected.txt:
* platform/mac/fast/html/details-add-summary-5-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-5-expected.txt:
* platform/mac/fast/html/details-add-summary-6-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-6-expected.txt:
* platform/mac/fast/html/details-add-summary-7-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-7-expected.txt:
* platform/mac/fast/html/details-add-summary-8-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-8-expected.txt:
* platform/mac/fast/html/details-add-summary-9-and-click-expected.txt:
* platform/mac/fast/html/details-add-summary-9-expected.txt:
* platform/mac/fast/html/details-add-summary-child-1-expected.txt:
* platform/mac/fast/html/details-add-summary-child-2-expected.txt:
* platform/mac/fast/html/details-nested-1-expected.txt:
* platform/mac/fast/html/details-nested-2-expected.txt:
* platform/mac/fast/html/details-no-summary1-expected.txt:
* platform/mac/fast/html/details-no-summary2-expected.txt:
* platform/mac/fast/html/details-no-summary3-expected.txt:
* platform/mac/fast/html/details-no-summary4-expected.txt:
* platform/mac/fast/html/details-open-javascript-expected.txt:
* platform/mac/fast/html/details-open1-expected.txt:
* platform/mac/fast/html/details-open2-expected.txt:
* platform/mac/fast/html/details-open3-expected.txt:
* platform/mac/fast/html/details-open4-expected.txt:
* platform/mac/fast/html/details-open5-expected.txt:
* platform/mac/fast/html/details-open6-expected.txt:
* platform/mac/fast/html/details-position-expected.txt:
* platform/mac/fast/html/details-remove-child-1-expected.txt:
* platform/mac/fast/html/details-remove-child-2-expected.txt:
* platform/mac/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-1-expected.txt:
* platform/mac/fast/html/details-remove-summary-2-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-2-expected.txt:
* platform/mac/fast/html/details-remove-summary-3-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-3-expected.txt:
* platform/mac/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-4-expected.txt:
* platform/mac/fast/html/details-remove-summary-5-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-5-expected.txt:
* platform/mac/fast/html/details-remove-summary-6-and-click-expected.txt:
* platform/mac/fast/html/details-remove-summary-6-expected.txt:
* platform/mac/fast/html/details-remove-summary-child-1-expected.txt:
* platform/mac/fast/html/details-remove-summary-child-2-expected.txt:
* platform/mac/fast/html/details-replace-summary-child-expected.txt:
* platform/mac/fast/html/details-replace-text-expected.txt:
* platform/mac/fast/html/details-writing-mode-expected.txt:
* platform/qt/fast/html/details-add-child-1-expected.txt:
* platform/qt/fast/html/details-add-child-2-expected.txt:
* platform/qt/fast/html/details-add-details-child-1-expected.txt:
* platform/qt/fast/html/details-add-details-child-2-expected.txt:
* platform/qt/fast/html/details-add-summary-1-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-1-expected.txt:
* platform/qt/fast/html/details-add-summary-10-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-10-expected.txt:
* platform/qt/fast/html/details-add-summary-2-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-2-expected.txt:
* platform/qt/fast/html/details-add-summary-3-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-3-expected.txt:
* platform/qt/fast/html/details-add-summary-4-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-4-expected.txt:
* platform/qt/fast/html/details-add-summary-5-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-5-expected.txt:
* platform/qt/fast/html/details-add-summary-6-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-6-expected.txt:
* platform/qt/fast/html/details-add-summary-7-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-7-expected.txt:
* platform/qt/fast/html/details-add-summary-8-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-8-expected.txt:
* platform/qt/fast/html/details-add-summary-9-and-click-expected.txt:
* platform/qt/fast/html/details-add-summary-9-expected.txt:
* platform/qt/fast/html/details-add-summary-child-1-expected.txt:
* platform/qt/fast/html/details-add-summary-child-2-expected.txt:
* platform/qt/fast/html/details-nested-1-expected.txt:
* platform/qt/fast/html/details-nested-2-expected.txt:
* platform/qt/fast/html/details-no-summary1-expected.txt:
* platform/qt/fast/html/details-no-summary2-expected.txt:
* platform/qt/fast/html/details-no-summary3-expected.txt:
* platform/qt/fast/html/details-no-summary4-expected.txt:
* platform/qt/fast/html/details-open-javascript-expected.txt:
* platform/qt/fast/html/details-open1-expected.txt:
* platform/qt/fast/html/details-open2-expected.txt:
* platform/qt/fast/html/details-open3-expected.txt:
* platform/qt/fast/html/details-open4-expected.txt:
* platform/qt/fast/html/details-open5-expected.txt:
* platform/qt/fast/html/details-open6-expected.txt:
* platform/qt/fast/html/details-position-expected.txt:
* platform/qt/fast/html/details-remove-child-1-expected.txt:
* platform/qt/fast/html/details-remove-child-2-expected.txt:
* platform/qt/fast/html/details-remove-summary-1-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-1-expected.txt:
* platform/qt/fast/html/details-remove-summary-2-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-2-expected.txt:
* platform/qt/fast/html/details-remove-summary-3-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-3-expected.txt:
* platform/qt/fast/html/details-remove-summary-4-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-4-expected.txt:
* platform/qt/fast/html/details-remove-summary-5-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-5-expected.txt:
* platform/qt/fast/html/details-remove-summary-6-and-click-expected.txt:
* platform/qt/fast/html/details-remove-summary-6-expected.txt:
* platform/qt/fast/html/details-remove-summary-child-1-expected.txt:
* platform/qt/fast/html/details-remove-summary-child-2-expected.txt:
* platform/qt/fast/html/details-replace-summary-child-expected.txt:
* platform/qt/fast/html/details-replace-text-expected.txt:
* platform/qt/fast/html/details-writing-mode-expected.txt:

Canonical link: https://commits.webkit.org/96949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109192 268f45cc-cd09-0410-ab3c-d52691b4dbfc