Source/WebCore/html/HTMLSummaryElement.cpp
@@ -31,7 +31,7 @@
 #include "MouseEvent.h"
 #include "NodeRenderingContext.h"
 #include "PlatformMouseEvent.h"
-#include "RenderSummary.h"
+#include "RenderBlock.h"
 #include "ShadowRoot.h"
 #include "ShadowTree.h"
 
@@ -70,7 +70,7 @@ HTMLSummaryElement::HTMLSummaryElement(const QualifiedName& tagName, Document* d
 
 RenderObject* HTMLSummaryElement::createRenderer(RenderArena* arena, RenderStyle*)
 {
-    return new (arena) RenderSummary(this);
+    return new (arena) RenderBlock(this);
 }
 
 bool HTMLSummaryElement::childShouldCreateRenderer(const NodeRenderingContext& childContext) const
@@ -120,7 +120,7 @@ bool HTMLSummaryElement::supportsFocus() const
 
 void HTMLSummaryElement::defaultEventHandler(Event* event)
 {
-    if (isMainSummary() && renderer() && renderer()->isSummary()) {
+    if (isMainSummary() && renderer()) {
         if (event->type() == eventNames().DOMActivateEvent && !isClickableControl(event->target()->toNode())) {
             if (HTMLDetailsElement* details = detailsElement())
                 details->toggleOpen();
